--- a/apache-tomcat-10.1.5/webapps/oldegg/index.html
+++ b/apache-tomcat-10.1.5/webapps/oldegg/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link href="./style/style.css" rel="stylesheet">
 </head>
-  <body style="background-color: rgb(244, 236, 226);">
+  <body style="background-color: #f4ece2;">
     <nav class="navbar sticky-top navbar-expand-lg navbar-light" style="padding: 20px 50px 15px 50px;background-color: rgb(244, 236, 226);">
         <a class="navbar-brand" href="#" style="padding-bottom: 15px;padding-right: 50px;">
             <img src="./images/oldegg-logo-transparent.png" width="150dp" height="50dp" alt="OldEgg">
