rgb color code to hex color codes

--- a/apache-tomcat-10.1.5/webapps/oldegg/index.html
+++ b/apache-tomcat-10.1.5/webapps/oldegg/index.html
@@ -8,7 +8,7 @@
     <link href="./style/style.css" rel="stylesheet">
 </head>
   <body style="background-color: #f4ece2;">
-    <nav class="navbar sticky-top navbar-expand-lg navbar-light" style="padding: 20px 50px 15px 50px;background-color: rgb(244, 236, 226);">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-light" style="padding: 20px 50px 15px 50px;background-color: #f4ece2;">
         <a class="navbar-brand" href="#" style="padding-bottom: 15px;padding-right: 50px;">
             <img src="./images/oldegg-logo-transparent.png" width="150dp" height="50dp" alt="OldEgg">
         </a>
@@ -25,7 +25,7 @@
           </button>
           <div class="collapse navbar-collapse fixed-right justify-content-end" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-item nav-link active btn rounded-pill px-4" style="color: aliceblue;background-color: rgb(117, 65, 176);" href="#"><span class="sr-only">Sell</span></a>
+              <a class="nav-item nav-link active btn rounded-pill px-4" style="color: aliceblue;background-color: #7541b0;" href="#"><span class="sr-only">Sell</span></a>
               <a class="nav-item nav-link" href="#"><img src="./images/btn-wishlist.svg" alt="Wishlist" height="30dp"></a>
               <a class="nav-item nav-link" href="#"><img src="./images/btn-cart.svg" alt="Wishlist" height="30dp"></a>
               <a class="nav-item nav-link disabled" href="#"><img src="./images/btn-account.svg" alt="Wishlist" height="30dp"></a>
@@ -36,7 +36,7 @@
       
       <div style="padding-left: 50px;padding-right: 50px;">
 
-        <span class="inline" style="color: rgb(117, 65, 176);">SHOP CATEGORIES:</span>
+        <span class="inline" style="color: #7541b0;">SHOP CATEGORIES:</span>
         <nav class="nav nav-pills flex-column flex-sm-row inline pb-5 pt-1">
             <a class="flex-sm-fill text-sm-center nav-link bg_white border50 mx-3" href="#">All</a>
             <a class="flex-sm-fill text-sm-center nav-link bg_white border50 mx-3" href="#">GPUs</a>
