--- a/apache-tomcat-10.1.5/webapps/oldegg/signup.html
+++ b/apache-tomcat-10.1.5/webapps/oldegg/signup.html
@@ -64,6 +64,27 @@
             <div class="form-row row">
               <div class="col-3"></div>
               <div class="col-6">
+                <label for="inputName"><h7>Name</h7></label>
+              </div>
+              <div class="col-3"></div>
+            </div>
+            <div class="form-row row">
+              <div class="col-3"></div>
+              <div class="col-6">
+                <input
+                  type="text"
+                  class="form-control"
+                  id="inputName"
+                  placeholder="John Doe"
+                />
+              </div>
+              <div class="col-3"></div>
+            </div>
+          </div>
+          <div class="form-group pb-4">
+            <div class="form-row row">
+              <div class="col-3"></div>
+              <div class="col-6">
                 <label for="inputPassword"><h7>Password</h7></label>
               </div>
               <div class="col-3"></div>
@@ -81,14 +102,32 @@
               <div class="col-3"></div>
             </div>
           </div>
+          <div class="form-group pb-4">
+            <div class="form-row row">
+              <div class="col-3"></div>
+              <div class="col-6">
+                <label for="inputMobile"><h7>Mobile Number</h7></label>
+              </div>
+              <div class="col-3"></div>
+            </div>
+            <div class="form-row row">
+              <div class="col-3"></div>
+              <div class="col-6">
+                <input
+                  type="tel"
+                  class="form-control"
+                  id="inputMobile"
+                  placeholder="82728292"
+                />
+              </div>
+              <div class="col-3"></div>
+            </div>
+          </div>
           <div class="row">
             <div class="col-3"></div>
-            <div class="col-2">
-              <button type="submit" class="btn bg_orange">Sign in</button>
-            </div>
-            <div class="col-2">
-              <button type="submit" class="btn">
-                <a class="underline" href="signup.html">Sign Up</a>
+            <div class="col-6">
+              <button type="submit" class="btn bg_orange">
+                Sign Up
               </button>
             </div>
             <div class="col"></div>
